[NEW] full crud

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,362 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+:root{
+    --dark-blue:#12232E;
+    --white:#EEFBFB;
+    --blue:#007CC7;
+    --sky-blue:#4DA8DA;
+    --font-1:'Staatliches', cursive;
+    --font-2: cursive, 'Tahoma', 'sans-serif'
+}
+p.small-reloaded {
+  font-size: 40px;
+  font-weight: 900;
+  position: relative;
+  left: 12rem;
+  transform: rotate(-12deg);
+}
+/* custom scrollbar */
+::-webkit-scrollbar{
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--white);
+}
+*{
+    margin: 0;
+    padding: 0;
+    font-family: var(--font-1);
+}
+body{
+    background-color: var(--dark-blue);
+}
+h1,h2,h3,h4,h5{ 
+    font-family: var(--font-1);
+}
+p{
+    font-family: var(--font-1);
+
+}
+hr{
+    margin: 1rem 0;
+    border: 2px solid var(--white);
+}
+.navbar-cust{
+    position: absolute;
+    z-index: 1;
+    padding: 1rem 10rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.navbar-cust li{
+    font-family: var(--font-1);
+    list-style: none;
+    display: inline;
+}
+
+.navbar-cust .left-part{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center
+}
+
+.navbar-cust .left-part li{
+    margin-right: 5rem;
+}
+
+.navbar-cust .right-part{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center
+}
+
+.navbar-cust .right-part li{
+    margin-left: 5rem;
+}
+
+.navbar-cust .logo img{
+    width: 10.5rem;
+    height: auto;
+}
+.navbar-cust .left-part p{
+    color: var(--white);
+    font-size: 1.5rem;
+}
+.navbar-cust a{
+    color: var(--white);
+    font-size: 1.5rem;
+    text-decoration: none;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+.navbar-cust a:hover{
+    color: var(--sky-blue);
+    text-shadow:0px 0px 30px var(--sky-blue);
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    -webkit-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+.banner-container{
+    position: relative;
+    text-align: center;
+}
+.banner-text{
+    width: 80%;
+    text-shadow:0px 0px 30px var(--blue);
+    letter-spacing: .5rem;
+    color: var(--white);
+    font-size: 7rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.connect-btn{
+    font-size: 2rem;
+    color: var(--white);
+    background-color: var(--blue);
+    margin-top: 1rem;
+    border:0px;
+    padding: 1rem 3rem;
+    border-radius: 3px;
+}
+.connect-btn:hover{
+    cursor: pointer;
+    box-shadow: 0px 0px 20px 4px var(--blue);
+}
+.banner-text img:first-of-type{
+    width: 6rem;
+    height: auto;
+    position: relative;
+    left: 4rem;
+    top: 2rem;
+}
+
+.banner-text img:nth-of-type(2){
+    width: 6rem;
+    height: auto;
+    position: relative;
+    right: 4rem;
+    top: 2rem;
+}
+.banner img{
+    width: 100%;
+    height: auto;
+}
+
+.white-container{
+    text-align: center;
+    margin-top: -5rem;
+    transform: skewY(-4deg);
+    position: relative;
+    width: 100%;
+    background-color: var(--white);
+    height: 500px;
+}
+.white-container-2{
+    text-align: center;
+    margin-top: -10rem;
+    transform: skewY(-4deg);
+    position: relative;
+    width: 100%;
+    background-color: var(--white);
+    height: 500px;
+}
+.heading-text{
+    font-size: 5rem;
+}
+.heading-text span{
+    color: var(--blue);
+}
+.small-container{
+    color: #252525;
+    padding-top: 2rem;
+    margin:0 20%;
+}
+.small-container-2{
+    color: #252525;
+    padding-top: 14rem;
+    margin:0 20%;
+}
+.text{
+    font-size: 1.5rem;
+}
+.b-text{
+    font-size: 2rem;
+}
+
+.text span, .b-text span{
+    color: var(--blue);
+}
+.two-images-container{
+    margin-top: -10rem;
+    z-index: 1;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    position: relative;
+}
+.two-images-container img {
+    width: 100%;
+}
+.two-images-container .img-1, .two-images-container .img-2{
+    position: relative;
+    transform: skewY(-4deg);
+}
+
+.two-images-container .img-1-text{
+    font-size: 5rem;
+    color: var(--white);
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+}
+.two-images-container .img-2-text{
+    font-size: 5rem;
+    color: var(--white);
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+}
+.two-images-container .img-1-text span, .two-images-container .img-2-text span{
+    color: var(--blue);
+}
+.pop-img-1{
+    text-align: center;
+    margin-top: -39.2rem;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+}
+.pop-img-1 img{
+    width: 30%;
+}
+.image-container{
+    transform: skewY(-4deg);
+    position: relative;
+    margin-top: -5rem;
+}
+.image-container img{
+    width: 100%;
+    height: auto;
+}
+.left{
+    text-align: left;
+}
+.right{
+    text-align: right;
+}
+.box{
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: 1fr;
+}
+.boxes{
+    color: var(--white);
+    font-size: 4rem;
+}
+.car-float-img img{
+    width: 20rem;
+    position:absolute;
+    right: 10rem;
+    top: -2rem;
+}
+
+.man-float-img img{
+    width: 15rem;
+    position:absolute;
+    left: 10rem;
+    top: 13rem;
+}
+.gangster-float-img img{
+    width: 13rem;
+    position:absolute;
+    right: 10rem;
+    top: 27rem;
+}
+.bag-float-img img{
+    width: 20rem;
+    position:absolute;
+    left: 10rem;
+    top: 43rem;
+}
+
+form.form_login {
+  max-width: 20rem;
+  width: 100%;
+  display: inline-grid;
+  justify-content: center;
+}
+
+.error_message {
+  font-size: 14px;
+  color: #e13737;
+}
+
+.note_text {
+  font-size: 12px;
+  color: brown;
+}
+
+.form_wrapper {
+    width: 500px;
+    text-align: center;
+    display: inline-grid;
+}
+input {
+    font-family: var(--font-2) !important;
+}
+
+textarea {
+    font-family: var(--font-2) !important;
+}
+
+li.name_wrapper {
+    color: var(--white);
+    font-size: 1.5rem;
+    text-decoration: none;
+    transition: all 0.2s ease-in;
+}
+
+li.logout_wrapper {
+    color: var(--white);
+    font-size: 1.5rem;
+    text-decoration: none;
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+}
+
+td {
+    font-family: var(--font-2) !important;
+    cursor: pointer;
+}
+
+.body_whitelist_modal.modal-body {
+    max-height: 500px;
+    overflow-y: auto;
+}
+
+.fade.whitelist_modal.modal.show {
+    --bs-modal-width: 900px !important;
+}
+
+div.form_det {
+    font-family: monospace;
+}
