--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
     --blue:#007CC7;
     --sky-blue:#4DA8DA;
     --font-1:'Staatliches', cursive;
-    --font-2: cursive, 'Tahoma', 'sans-serif'
+    --font-2: Arial, Helvetica, sans-serif
 }
 p.small-reloaded {
   font-size: 40px;
@@ -347,7 +347,7 @@ form.form_login {
 
 .note_text {
   font-size: 12px;
-  color: brown;
+  color: #0325cd;
 }
 
 .form_wrapper {
@@ -394,4 +394,8 @@ td {
 
 div.form_det {
     font-family: monospace;
+}
+
+p.feature_big {
+    color: black;
 }
